FireAlarmApplication.Web/mtg_debug_20260127_163130.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 16:31:30
NetCDF: C:\Users\kubil\AppData\Local\Temp\97188a73-38b6-4f67-9945-29b9f5ef1942.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
